--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,10 @@
     {
       "source": "/api/:path*",
       "destination": "https://api.hypebot.top/api/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
